<?xml version="1.0"?>
<package>
  <name>ros_teensy</name>
  <version>0.0.1</version>
  <description>The ros_teensy package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="david@todo.todo">david</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv3</license>

  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>arduino-core</run_depend>
  <run_depend>rosserial_client</run_depend>
  <run_depend>rosserial_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
