<package>
  <name>rosserial</name>
  <version>0.4.2</version>
  <description>
    Metapackage for core of rosserial.
  </description>
  <author>Michael Ferguson</author>
  <maintainer email="mferguson@willowgarage.com">Michael Ferguson</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/rosserial</url>

  <run_depend>rosserial_msgs</run_depend>
  <run_depend>rosserial_client</run_depend>
  <run_depend>rosserial_python</run_depend>

  <export>
   <metapackage/>
  </export>
</package>
