<package format="3">
  <name>rosserial</name>
  <version>0.9.2</version>
  <description>
    Metapackage for core of rosserial.
  </description>
  <author>Michael Ferguson</author>
  <maintainer email="paul.bouchier@gmail.com">Paul Bouchier</maintainer>
  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/rosserial</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rosserial_msgs</exec_depend>
  <exec_depend>rosserial_client</exec_depend>
  <exec_depend>rosserial_python</exec_depend>

  <export>
   <metapackage/>
  </export>
</package>
