<package format="3">
  <name>rosserial_arduino</name>
  <version>0.9.2</version>
  <description>
    rosserial for Arduino/AVR platforms.
  </description>
  <author>Michael Ferguson</author>
  <author>Adam Stambler</author>
  <maintainer email="paul.bouchier@gmail.com">Paul Bouchier</maintainer>
  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/rosserial_arduino</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>arduino-core</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rosserial_msgs</exec_depend>
  <exec_depend>rosserial_client</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rosserial_python</exec_depend>
</package>
