<package format="3">
  <name>rosserial_chibios</name>
  <version>0.9.2</version>
  <description>
    rosserial for ChibiOS/HAL platforms.
  </description>
  <author>Hermann von Kleist</author>
  <maintainer email="hermann.von_kleist@turag.de">Hermann von Kleist</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/rosserial_chibios</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rosserial_client</exec_depend>
</package>
