<package format="3">
  <name>rosserial_client</name>
  <version>0.9.2</version>
  <description>
    Generalized client side source for rosserial.
  </description>
  <author>Michael Ferguson</author>
  <author>Adam Stambler</author>
  <maintainer email="paul.bouchier@gmail.com">Paul Bouchier</maintainer>
  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/rosserial_client</url>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>
  <build_export_depend>rosbash</build_export_depend>

  <exec_depend>rosserial_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf</exec_depend>
  
  <test_depend>rosunit</test_depend>
  <test_depend>rosserial_msgs</test_depend>
</package>
