<package>
  <name>rosserial_embeddedlinux</name>
  <version>0.9.2</version>
  <description>
    rosserial for embedded Linux enviroments
  </description>
  <author>Paul Bouchier</author>
  <maintainer email="paul.bouchier@gmail.com">Paul Bouchier</maintainer>
  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/rosserial_embeddedlinux</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rosserial_client</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>rosserial_msgs</run_depend>
</package>
