<package format="3">
  <name>rosserial_mbed</name>
  <version>0.9.2</version>
  <description>
    rosserial for mbed platforms.
  </description>
  <author>Gary Servin</author>
  <maintainer email="garyservin@gmail.com">Gary Servin</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/rosserial_mbed</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>rosserial_msgs</exec_depend>
  <exec_depend>rosserial_client</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>


