<package>
  <name>rosserial_msgs</name>
  <version>0.4.3</version>
  <description>
    Messages for automatic topic configuration using rosserial.
  </description>
  <author>Michael Ferguson</author>
  <maintainer email="mferguson@willowgarage.com">Michael Ferguson</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/rosserial_msgs</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <run_depend>message_runtime</run_depend>
</package>
