<package>
  <name>rosserial_rp2040</name>
  <version>0.9.2</version>
  <description>
    rosserial for rp2040 based microcontrollers.
  </description>
  <author>Michael Ferguson</author>
  <author>Paul Tervoort</author>
  <maintainer email="PaulTervoortMail@gmail.com">Paul Tervoort</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>rosserial_msgs</run_depend>
  <run_depend>rosserial_client</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rosserial_python</run_depend>
</package>

