<?xml version="1.0"?>
<package format="2">
  <name>rosserial_server</name>
  <version>0.9.2</version>
  <description>
    A more performance- and stability-oriented server alternative implemented
    in C++ to rosserial_python.
  </description>

  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>
  <author email="mpurvis@clearpathrobotics.com">Mike Purvis</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rosserial_msgs</depend>
  <depend>std_msgs</depend>
  <depend>roscpp</depend>
  <depend>topic_tools</depend>
  <build_depend>python3-dev</build_depend>
  <build_depend>libboost-thread-dev</build_depend>
  <exec_depend>libboost-thread</exec_depend>
</package>
