<package format="3">
  <name>rosserial_vex_cortex</name>
  <version>0.9.2</version>
  <description>
    rosserial for Cortex/AVR platforms.
  </description>
  <author>Cannon</author>
  <maintainer email="canyonturtle@gmail.com">Canyon Turtle</maintainer>
  <license>BSD</license>
  <!--<url>http://ros.org/wiki/rosserial_arduino</url>-->

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>rosserial_client</exec_depend>
  <exec_depend>rosserial_python</exec_depend>
</package>
